--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 			</button>
 			<p class="services">Impressions tous formats <span>en boutique et en ligne</span></p>
 			<div class="dots">
-				<div class="dot dot_selected"></div>
+				<!-- <div class="dot dot_selected"></div> -->
+				<!-- <div class="dot"></div>
 				<div class="dot"></div>
-				<div class="dot"></div>
-				<div class="dot"></div>
+				<div class="dot"></div> -->
 			</div>
 		</div>
 		<section id="about-us" class="container">
